# CommiZard

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  noxfile.py  pyproject.toml  return_codes.sh
.github/workflows/: ci.yml  e2e.yml  python-publish.yml
src/commizard/: cli.py  commands.py  error_check.py  git_utils.py  llm_providers.py  main.py  ollama_errors.py  output.py  start.py
src/commizard/utils/: terminal.py
tests/: test_clear.py  test_cli.py  test_commands.py  test_git_utils.py  test_llm_providers.py  test_output.py  test_start.py
tests/e2e/: test_arg_passing.py  test_user_workflow.py
tests/unit/: test_cli.py  test_git_utils.py  test_llm_providers.py  test_output.py  test_start.py
